--- a/template.html
+++ b/template.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Stichery</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet">
     <link href="css/font-awesome.min.css" type="text/css" rel="stylesheet">
@@ -16,15 +17,38 @@
         <div class="head-menu">
           <nav>
             <ul class="menu">
-              <li class="menu-item"><a href="home.html">
+              <li class="menu-item" data-contentNumber="home.html"><a href="#">
                   <p>Home</p></a></li>
-              <li class="menu-item"><a href="servise.html">
+              <li class="menu-item" data-contentNumber="servise.html"><a href="#">
                   <p>Servises</p></a></li>
-              <li class="menu-item"><a href="contact.html">
+              <li class="menu-item" data-contentNumber="contact.html"><a href="#">
                   <p>Contact</p></a></li>
             </ul>
           </nav>
           <p><i class="fa fa-phone" aria-hidden="true"> +123 456 789</i></p>
+        </div>
+      </div>
+    </div>
+    <div class="myCont">
+      <div class="banner">
+        <div class="banner-caption">
+          <h3>Your Design, We<span class="blue"> Deliver</span></h3>
+          <p>Suit Resizing</p>
+          <div class="slide-btn mybtn"><a>Read more<i class="fa fa-angle-double-right" aria-hidden="true"></i></a></div>
+        </div>
+      </div>
+      <div class="aboutus">
+        <div class="head-aboutus">
+          <h2>Your Personal Tailor For Unique People Only</h2>
+          <h3 class="boldh3">Welcome t<span class="underline">o our</span> <span class="blue">Stitchery</span></h3>
+        </div>
+        <div class="content-aboutus">
+          <div class="text-content">
+            <h4 class="articleh4">Why Custom Tailoring</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s but also the leap into electronic typesetting dolor amet.</p>
+            <p>Integer laoreet ultricies nunc, vitae eleifend elit rutrum sit amet. In elementum, magna id pellentesque auctor, risus dolor congue urna, nec dapibus eros magna a odio. Duis laoreet risus eget malesuada consequat. Nunc et tortor dignissim, laoreet est eget</p><a href="servise.html">Servise info <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+          </div>
+          <div class="photo-content"><img src="img/ab.jpg"><img class="abs" src="img/ab2.jpg"></div>
         </div>
       </div>
     </div>
