change menu link

--- a/template.html
+++ b/template.html
@@ -17,11 +17,11 @@
         <div class="head-menu">
           <nav>
             <ul class="menu">
-              <li class="menu-item" data-contentNumber="home.html"><a href="#">
+              <li class="menu-item" data-contentNumber="home.html"><a>
                   <p>Home</p></a></li>
-              <li class="menu-item" data-contentNumber="servise.html"><a href="#">
+              <li class="menu-item" data-contentNumber="servise.html"><a>
                   <p>Servises</p></a></li>
-              <li class="menu-item" data-contentNumber="contact.html"><a href="#">
+              <li class="menu-item" data-contentNumber="contact.html"><a>
                   <p>Contact</p></a></li>
             </ul>
           </nav>
