--- a/template.html
+++ b/template.html
@@ -17,7 +17,7 @@
         <div class="head-menu">
           <nav>
             <ul class="menu">
-              <li class="menu-item" data-contentNumber="home.html"><a>
+              <li class="menu-item active" data-contentNumber="home.html"><a>
                   <p>Home</p></a></li>
               <li class="menu-item" data-contentNumber="servise.html"><a>
                   <p>Servises</p></a></li>
@@ -70,9 +70,9 @@
         <div class="footer-center col-xs-12 col-sm-6 col-md-2 col-lg-2">
           <h3>Links</h3>
           <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="servise.html">Servises</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Servises</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </div>
         <div class="footer-right col-xs-12 col-sm-6 col-md-5 col-lg-5">
